--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^2.6.5",
     "import-local": "^2.0.0",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
