--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "import-local": "^2.0.0",
+    "iview": "^3.3.3",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.2",
